Body spacing fix for smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial,
 		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
 	text-align: center;
-	padding: 2rem;
+	padding: 1rem;
 	max-width: 80rem;
 	margin-left: auto;
 	margin-right: auto;
@@ -194,6 +194,9 @@ footer {
 		margin-top: 1rem;
 		margin-left: 1rem;
 		margin-right: 1rem;
+	}
+	body {
+		padding: 2rem;
 	}
 }
 
